<resources>
    <string name="app_name">Game Of Chances</string>
    <string name="welcomeText">Welcome to The</string>
    <string name="app_logo">App logo</string>
    <string name="app_banner">The Game of Chances</string>
    <string name="start">LET\'S GO</string>
    <string name="number_to_find">Number To Find</string>
    <string name="attemptsLeft">Numbers Of Attempt Left : 3</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="successMessage"><b>Congratulations!</b> You Won The Game</string>
    <string name="failureMessage">Better Luck Next Time</string>
    <string name="play_again">PLAY AGAIN</string>
    <string name="exit">EXIT</string>
    <string name="enter_a_number_integer">Enter A Number (Integer)</string>
    <string name="confirm_number_button">Confirm Number Button</string>
</resources>