<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gameScreenLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/apptheme"
    tools:context=".GameScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/row1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toTopOf="@+id/row2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/tile1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="28dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/tile2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tile1Text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/coverimage"
                    android:gravity="center"
                    android:textColor="#F80707"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/tile2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="28dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/tile3"
                app:layout_constraintStart_toEndOf="@+id/tile1"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tile2Text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/coverimage"
                    android:gravity="center"
                    android:textColor="#FA0606"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/tile3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="28dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tile2"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tile3Text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/coverimage"
                    android:gravity="center"
                    android:textColor="#FA0606"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/row2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toTopOf="@+id/row3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/tile4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="28dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/tile5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tile4Text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/coverimage"
                    android:gravity="center"
                    android:textColor="#FA0606"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/tile5"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="28dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/tile6"
                app:layout_constraintStart_toEndOf="@+id/tile4"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tile5Text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/coverimage"
                    android:gravity="center"
                    android:textColor="#FA0606"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/tile6"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="28dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tile5"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tile6Text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/coverimage"
                    android:gravity="center"
                    android:textColor="#FA0606"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/row3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/tile7"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="28dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/tile8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tile7Text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/coverimage"
                    android:gravity="center"
                    android:textColor="#FA0606"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/tile8"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="28dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/tile9"
                app:layout_constraintStart_toEndOf="@+id/tile7"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tile8Text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/coverimage"
                    android:gravity="center"
                    android:textColor="#FA0606"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/tile9"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="28dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tile8"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tile9Text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/coverimage"
                    android:gravity="center"
                    android:textColor="#FA0606"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/gameMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/number_to_find"
            android:textColor="#FDFDFD"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/row1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />


        <TextView
            android:id="@+id/targetTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="#FFB9FB05"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gameMessage" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gameMessage">

            <EditText
                android:id="@+id/targetEditText"
                android:layout_width="200dp"
                android:layout_height="0dp"
                android:background="@color/white"
                android:hint="@string/enter_a_number_integer"
                android:inputType="number"
                android:padding="8dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/submitButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageButton
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@color/transparent"
                android:contentDescription="@string/confirm_number_button"
                android:padding="8dp"
                android:src="@android:drawable/checkbox_on_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/targetEditText"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/attemptsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:text="@string/attemptsLeft"
            android:textColor="#FDFCFC"
            app:layout_constraintBottom_toTopOf="@+id/row1"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>